--- a/src/Components/Capsules/Capsules.css
+++ b/src/Components/Capsules/Capsules.css
@@ -1,11 +1,16 @@
+.capsule__mainwrap {
+    min-width: 300px;
+    max-width: 400px;
+    background-color: white;
+    border-radius: 8px;
+    margin: 10px;
+    padding: 20px;
+}
+
 .capsule__wrap {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 300px;
-    background-color: burlywood;
-    margin: 10px;
-    padding: 20px;
 }
 
 .capsule__main h2 {
